fixed footer spacing

--- a/bedrock.css
+++ b/bedrock.css
@@ -95,7 +95,7 @@ body{
 }
 #footer li{
 	display: inline;
-	margin-right: 45px;
+	margin-right: 35px;
 }
 
 
